# deepdiff

./: .bumpversion.cfg  .coveragerc  .direnvrc.example  .envrc.example  .gitignore  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  MANIFEST.in  README.md  README.txt  conftest.py  mypy.ini  noxfile.py  pyproject.toml  pyrightconfig.json.example  readthedocs-requirements.txt  refdesign.odt  requirements-cli.txt  requirements-dev-3.6.txt  requirements-dev-3.7.txt  requirements-dev.txt  requirements-dev3.8.txt  requirements-docs.txt  requirements-optimize.txt  requirements.txt  run_tests.py  run_tests.sh  setup.cfg  setup.py  tests.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yaml
deepdiff/: __init__.py  anyset.py  base.py  colored_view.py  commands.py  compare.py  contenthash.py  ddiff.py  deepbase.py  deepdiff.py  deephash.py  deephash_doc.rst  deepsearch.py  deepset.py  delta.py  diff.py  diff_doc.rst  distance.py  helper.py  helpers.py  inventorydiff.py  lfucache.py  main.py  model.py  operator.py  path.py  search.py  search_doc.rst  serialization.py  structurediff.py  summarize.py  summarize2.py  summarize3.py
docs/: Makefile  authors.rst  basics.rst  buildme.py  changelog.rst  colored_view.rst  commandline.rst  conf.py  contenthash.rst  custom.rst  deep_distance.rst  deephash.rst  deephash_doc.rst  delta.rst  delta_doc.rst  diff.rst  diff_doc.rst  dsearch.rst  exclude_paths.rst  extract.rst  faq.rst  ignore_order.rst  ignore_types.rst  ignore_types_or_values.rst  index.rst  make.bat  numbers.rst  optimizations.rst  other.rst  search_doc.rst  serialization.rst  stats.rst  support.rst  troubleshoot.rst  view.rst
docs/_static/: custom.css
docs/_templates/: about.html  navigation.html
docs/_templates/basic/: layout.html
test/: __init__.py  setup.py  test_deepdiff.py  test_deepset.py
tests/: __init__.py  diff_tests.py  hash_tests.py  search_tests.py  test_anyset.py  test_cache.py  test_colored_view.py  test_command.py  test_custom.py  test_delta.py  test_diff.py  test_diff_datetime.py  test_diff_delta_view.py  test_diff_include_paths  test_diff_include_paths.py  test_diff_include_paths_count.py  test_diff_iterable.py  test_diff_math.py  test_diff_numpy.py  test_diff_other.py  test_diff_ref.py  test_diff_rrules.py  test_diff_text.py  test_diff_tree.py  test_distance.py  test_hash.py  test_helper.py  test_ignore_order.py  test_ignore_uuid_types.py  test_lfucache.py  test_memoryview.py  test_model.py  test_operators.py  test_path.py  test_search.py  test_security.py  test_serialization.py  test_summarize.py  test_summarize2.py  tests.py
tests/fixtures/: another.yaml  c_t1.csv  c_t2.csv  compare_func_result.json  compare_func_result1.json  compare_func_t1.json  compare_func_t2.json  compounds.json  d_t2.yaml  invalid_yaml.yaml  nested_a_result.json  nested_a_t1.json  nested_a_t2.json  nested_b_result.json  nested_b_t1.json  nested_b_t2.json  nested_c_result_report_repetition_false.json  nested_c_result_report_repetition_true.json  nested_c_t1.json  nested_c_t2.json  patch1.pickle  t1.csv  t1.json  t1.pickle  t1.toml  t1_corrupt.json  t2.csv  t2.json  t2.pickle  t2.toml  t2.yaml  t2_json.csv
